--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CHANGE: Update with your name -->
-    <title>Tod Cherner, Ph.D.</title>
+    <title>Todd Cherner, Ph.D.</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
