--- a/about_me.html
+++ b/about_me.html
@@ -55,11 +55,7 @@
                         <h3>Professional Background</h3>
                         <!-- CHANGE: Write about your professional journey -->
                         <p>
-                            I started my journey in education by tutoring high school students, where I saw firsthand 
-                            how important clarity and structure are for learning. I later moved into instructional design, 
-                            working on e-learning projects for universities and non-profit programs. My work includes course mapping, 
-                            content development, multimedia integration, and creating assessments that truly measure understanding.
-                        </p>
+                            I began my career as a 10th grade high school English teacher in Lake County, Florida. Those years were formative to me, as I learned how to be a teacher and a member of a school community. I taught during the early years of No Child Left Behind Act, and our school was consistently rated as "needing improvement" and threatened with school improvement protocols. As I progressed through my education and then as a professor, I remember those days well and carry them with me into each class I teach.
                     </div>
                 </div>
             </div>
