Changed header to Career Trajectories and added a statement.

--- a/about_me.html
+++ b/about_me.html
@@ -61,7 +61,7 @@
             </div>
 
             <!-- ============================================ -->
-            <!-- SUBSECTION 2: CAREER GOALS -->
+            <!-- SUBSECTION 2: CAREER TRAJECTORY -->
             <!-- ============================================ -->
             <div class="about-block reverse">
                 <div class="about-content">
@@ -81,13 +81,10 @@
                     
                     <!-- Text on Left -->
                     <div class="about-text">
-                        <h3>Career Aspirations & Goals</h3>
+                        <h3>Career Trajectory</h3>
                         <!-- CHANGE: Write about your career goals -->
                         <p>
-                            Share your career aspirations, what you're working towards, 
-                            and your vision for the future. What impact do you want to make?
-                            What are your short-term and long-term goals? 
-                            Add 3-5 sentences about where you're headed.
+                            Teaching and learning have always been the focal point of my career. I have maintained that focus, from starting as a high school English teacher becoming professor and now directing academic programs and leading initiatives. By keeping this focus, it allows me to center my efforts on students. At this point in my career, I would love to expand my efforts by directing a center dedicated to teaching and learning in higher education. That will allow me to continue my focus and support colleagues who share that same passion.
                         </p>
                     </div>
                 </div>
