Update About Me

--- a/about_me.html
+++ b/about_me.html
@@ -84,14 +84,14 @@
                         <h3>Career Trajectory</h3>
                         <!-- CHANGE: Write about your career goals -->
                         <p>
-                            Teaching and learning have always been the focal point of my career. I have maintained that focus, from starting as a high school English teacher becoming professor and now directing academic programs and leading initiatives. By keeping this focus, it allows me to center my efforts on students. At this point in my career, I would love to expand my efforts by directing a center dedicated to teaching and learning in higher education. That will allow me to continue my focus and support colleagues who share that same passion.
+                            Teaching and learning have always been the focal point of my career. I have maintained that focus from being a high school English teacher to becoming professor and now directing academic programs and leading initiatives. As I keep growing in the profession, I am very interested in becoming the executive director of a teaching center, as it will allow me to keep teaching and learning central to my work. 
                         </p>
                     </div>
                 </div>
             </div>
 
             <!-- ============================================ -->
-            <!-- SUBSECTION 3: PERSONAL INTERESTS -->
+            <!-- SUBSECTION 3: TEACHER-SCHOLAR -->
             <!-- ============================================ -->
             <div class="about-block">
                 <div class="about-content">
@@ -114,9 +114,7 @@
                         <h3>Personal Interests</h3>
                         <!-- CHANGE: Write about your hobbies and interests -->
                         <p>
-                            When I’m not designing learning materials, I enjoy exploring user interface design, 
-                            reading research on digital pedagogy, and experimenting with new learning technologies. 
-                            Outside of work, I love watercolor painting, long walks, and discovering new coffee shops.
+                            Conducting research is core to my work. As a scholar, I am passionate about the digital pedagogies, which are ways that we can use technology for instructional purposes. 
                         </p>
                     </div>
                 </div>
