Teacher Scholar Header

--- a/about_me.html
+++ b/about_me.html
@@ -111,7 +111,7 @@
                     
                     <!-- Text on Right -->
                     <div class="about-text">
-                        <h3>Personal Interests</h3>
+                        <h3>Teacher-Scholar</h3>
                         <!-- CHANGE: Write about your hobbies and interests -->
                         <p>
                             Conducting research is core to my work. As a scholar, I am passionate about the digital pedagogies, which are ways that we can use technology for instructional purposes. Through my research, I work to identify impactful strategies for using technology to drive student learning, which has led me into the Scholarship of Teaching and Learning. Over the next few years, I plan to formalize my work in SOTL and become a national leader in the field.
