--- a/about_me.html
+++ b/about_me.html
@@ -130,9 +130,9 @@
                 <!-- Type: .pdf -->
                 <!-- Description: Your CV/Resume -->
                 <!-- Note: Create a "files" folder and put -->
-                <!--       your CV there as "your_cv.pdf" -->
+                <!--       your CV there as "Cherner-CV.pdf" -->
                 <!-- ========================================== -->
-                <a href="files/your_cv.pdf" class="btn btn-primary" download>Download My CV</a>
+                <a href="files/Cherner-CV.pdf" class="btn btn-primary" download>Download My CV</a>
             </div>
         </div>
     </section>
@@ -142,8 +142,8 @@
     <!-- ============================================ -->
     <footer class="footer">
         <div class="container">
-            <!-- CHANGE: Replace "Your Name" and year -->
-            <p>&copy; 2024 Your Name. All rights reserved.</p>
+            <!-- CHANGE: Replace "Todd Cherner" and 2026 -->
+            <p>&copy; 2026 Todd Cherner. All rights reserved.</p>
         </div>
     </footer>
 
