Updated Career Trajectory name
images-cherner-career-trajectory.jpg

--- a/about_me.html
+++ b/about_me.html
@@ -76,7 +76,7 @@
                         <!-- Ideas: Inspirational workspace, future vision, -->
                         <!--        goal planning, or aspirational imagery -->
                         <!-- ========================================== -->
-                        <img src="images/about_goals.jpg" alt="Career aspirations">
+                        <img src="images-cherner-career-trajectory.jpg" alt="Career aspirations">
                     </div>
                     
                     <!-- Text on Left -->
