--- a/about_me.html
+++ b/about_me.html
@@ -99,14 +99,14 @@
                     <div class="about-image">
                         <!-- ========================================== -->
                         <!-- IMAGE REQUIRED -->
-                        <!-- File: images/about_interests.jpg -->
+                        <!-- File: images/teacher-scholar.jpg -->
                         <!-- Size: 1200x800 pixels (landscape) -->
                         <!-- Type: .jpg or .png -->
                         <!-- Description: Photo of your hobbies/interests -->
                         <!-- Ideas: You doing a hobby, travel photos, -->
                         <!--        family activities, creative projects -->
                         <!-- ========================================== -->
-                        <img src="images/about_interests.jpg" alt="Personal interests">
+                        <img src="images/teacher-scholar.jpg" alt="Personal interests">
                     </div>
                     
                     <!-- Text on Right -->
