--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <!-- CHANGE: Replace "Your Name" with your actual name -->
-            <a href="index.html" class="nav-logo">Your Name</a>
+            <a href="index.html" class="nav-logo">Todd Cherner</a>
             <ul class="nav-menu">
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="about_me.html" class="nav-link">About Me</a></li>
@@ -31,8 +31,7 @@
         <div class="container">
             <h2 class="section-title">Portfolio</h2>
             <p class="section-subtitle">
-                Explore my work. You can keep 1 category or many.  
-                You can also remove any category or project you don’t need.
+                Welcome to my Portfolio Page, a collection of my work over the last 20 years! It is organized with my most recent accomplishments listed at UNC first and then works backwards to when I was a high school teacher. 
             </p>
 
             <!-- ================================================================= -->
