Portfolio Page - General Text Based Updates

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
             <!-- ================================================================= -->
 
             <!-- ============================================================ -->
-            <!-- CATEGORY 1: COURSE DEVELOPMENT                               -->
+            <!-- CATEGORY 1: The University of North Carolina at Chapel Hill  -->
             <!-- CATEGORY START: COURSE DEVELOPMENT                           -->
             <!-- ============================================================ -->
             <div class="portfolio-category">
@@ -52,11 +52,10 @@
                 <div class="category-header-box">
                     <div class="category-icon"></div>
                     <div class="category-title-section">
-                        <h3>Course Development</h3>
+                        <h3>The University of North Carolina at Chapel Hill (2019-Current)</h3>
                         <!-- CHANGE: Brief description of this category (2-3 sentences) -->
                         <p>
-                            Educational courses, curricula, and teaching materials I've created 
-                            to support meaningful learning experiences in different contexts.
+                            Program Director, School of Education
                         </p>
                     </div>
                 </div>
@@ -86,14 +85,12 @@
                             </div>
                             <div class="project-content">
                                 <!-- CHANGE: Project title -->
-                                <h5>Course Project Title 1</h5>
+                                <h5>Establishing the MEITE Program</h5>
                                 <!-- CHANGE: Date and context -->
-                                <p class="project-meta">Date: Month Year | Institution/Context</p>
+                                <p class="project-meta">Date: Academic Year 2019-2020 | UNC School of Education</p>
                                 <!-- CHANGE: Project description (3-5 sentences) -->
                                 <p class="project-description">
-                                    Describe this course development project. What was the goal? 
-                                    Who was it for? What did students learn? What was your role in designing 
-                                    or teaching it? Mention any outcomes or feedback you received.
+                                    My vision for MEITE was to create a student-focused program with a career-ready outcome. Starting in the Spring of 2019, I worked to understand the program and then gained the support of our key stakeholders (faculty, administrators students, alumni, industory partners) to implement it. Now, as we celebrate its 10th anniveresary, our work is reflected in our alum's professioanl success!
                                 </p>
                                 <!-- CHANGE: Add relevant tags/keywords -->
                                 <div class="project-tags">
