--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
                                 <!-- If you don't have an image yet, you can   -->
                                 <!-- temporarily use any placeholder image.    -->
                                 <!-- ========================================== -->
-                                <img src="images/course_dev_project_1.jpg" alt="Course Development Project 1">
+                                <img src="images/MEITE-10.jpg" alt="Course Development Project 1">
                             </div>
                             <div class="project-content">
                                 <!-- CHANGE: Project title -->
