Updated Portfolio Images for UNC

--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
                                 <!-- If you don't have an image yet, you can   -->
                                 <!-- temporarily use any placeholder image.    -->
                                 <!-- ========================================== -->
-                                <img src="images/MEITE-Program-Career-Outcomes.jpg" alt="Course Development Project 1">
+                                <img src="images/MEITE-10.jpg" alt="Course Development Project 1">
                             </div>
                             <div class="project-content">
                                 <!-- CHANGE: Project title -->
@@ -106,7 +106,7 @@
                     <div class="project-card">
                         <div class="project-item reverse">
                             <div class="project-image">
-                                <img src="images/course_dev_project_2.jpg" alt="Course Development Project 2">
+                                <img src="images/MEITE-Program-Career-Outcomes.jpg" alt="Course Development Project 2">
                             </div>
                             <div class="project-content">
                                 <h5>Course Project Title 2</h5>
